--- a/creative coding activities/act8_audio_visualisation/index.html
+++ b/creative coding activities/act8_audio_visualisation/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>p5.js Audio Visualization</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Colorful Audio Visualizer</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
-  <script src="sketch.js"></script>
+  <script src="sketch.js" defer></script>
+  <style>
+    body { margin: 0; overflow: hidden; }
+  </style>
 </head>
 <body>
 </body>
